Refatoração de LeadTicketServiceImpl.java